tests/ui/single-use-lifetime/issue-107998.stderr
error: function pointer types may not have generic parameters
  --> $DIR/issue-107998.rs:3:18
   |
LL | fn with<R>(f: &fn<'a>(x: &'a i32) -> R) -> R {
   |                  ^^^^
   |
help: consider moving the lifetime parameter to a `for` parameter list
   |
LL - fn with<R>(f: &fn<'a>(x: &'a i32) -> R) -> R {
LL + fn with<R>(f: &for<'a> fn(x: &'a i32) -> R) -> R {
   |

error: lifetime parameter `'a` only used once
  --> $DIR/issue-107998.rs:3:19
   |
LL | fn with<R>(f: &fn<'a>(x: &'a i32) -> R) -> R {
   |                   ^^      ---
   |                   |       |
   |                   |       ...is used only here
   |                   |       help: elide the single-use lifetime
   |                   this lifetime...
   |
note: the lint level is defined here
  --> $DIR/issue-107998.rs:1:9
   |
LL | #![deny(single_use_lifetimes)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

